// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders contact_assignment correctly 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="journeyWarning"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      Billy assigned Test Person to Roger
    </MyText>
  </Flex>
</Flex>
`;

exports[`renders contact_unassignment correctly 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="journeyWarning"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      Roger was Unassigned Test Person
    </MyText>
  </Flex>
</Flex>
`;

exports[`renders interaction correctly 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="commentIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {
            "fontSize": 32,
          },
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
        }
      }
    >
      Comment
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      Test Interaction
    </MyText>
  </Flex>
</Flex>
`;

exports[`renders survey correctly 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="surveyIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
        }
      }
    >
      Test Survey
    </MyText>
    <Flex
      direction="column"
      key="1"
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#A0A2A6",
            "fontSize": 14,
            "marginTop": 8,
          }
        }
      >
        Question 1
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Answer 1
      </MyText>
    </Flex>
    <Flex
      direction="column"
      key="2"
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#A0A2A6",
            "fontSize": 14,
            "marginTop": 8,
          }
        }
      >
        Question 2
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Answer 2
      </MyText>
    </Flex>
    <Flex
      direction="column"
      key="3"
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#A0A2A6",
            "fontSize": 14,
            "marginTop": 8,
          }
        }
      >
        Question 3
      </MyText>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Answer 3
      </MyText>
    </Flex>
  </Flex>
</Flex>
`;

exports[`stage is rendered correctly with old stage for a contact 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="journeyIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
        }
      }
    >
      Uninterested to Curious
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      Test Person changed from Uninterested to Curious
    </MyText>
  </Flex>
</Flex>
`;

exports[`stage is rendered correctly with old stage for self 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="journeyIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
        }
      }
    >
      Uninterested to Curious
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      You changed from Uninterested to Curious
    </MyText>
  </Flex>
</Flex>
`;

exports[`stage is rendered correctly without old stage for a contact 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="journeyIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
        }
      }
    >
      Curious
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      You added Test Person to MissionHub as Curious
    </MyText>
  </Flex>
</Flex>
`;

exports[`stage is rendered correctly without old stage for self 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="journeyIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
        }
      }
    >
      Curious
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      You added yourself to MissionHub as Curious
    </MyText>
  </Flex>
</Flex>
`;

exports[`step is rendered correctly with comment 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="stepsIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
        }
      }
    >
      Completed Step of Faith
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      Test Step

test comment on completed step
    </MyText>
  </Flex>
</Flex>
`;

exports[`step is rendered correctly with pathway stage 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="stepsIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
        }
      }
    >
      Completed Guiding Step of Faith
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      Test Step
    </MyText>
  </Flex>
</Flex>
`;

exports[`step is rendered correctly without comment 1`] = `
<Flex
  align="center"
  direction="row"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingRight": 24,
      "paddingVertical": 19,
      "width": 750,
    }
  }
>
  <Flex
    value={1}
  >
    <Icon
      name="stepsIcon"
      size={32}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#007398",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {},
        ]
      }
      type="MissionHub"
    />
  </Flex>
  <Flex
    direction="column"
    style={
      Object {
        "borderLeftColor": "#E6E8EC",
        "borderLeftWidth": 1,
        "paddingBottom": 5,
        "paddingLeft": 20,
      }
    }
    value={3.5}
  >
    <DateComponent
      date="2017-12-06T14:24:52Z"
      format="LL"
      style={
        Object {
          "color": "#A0A2A6",
          "fontSize": 10,
        }
      }
    />
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#007398",
          "fontSize": 16,
        }
      }
    >
      Completed Step of Faith
    </MyText>
    <MyText
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 14,
        }
      }
    >
      Test Step
    </MyText>
  </Flex>
</Flex>
`;
